--- a/index.html
+++ b/index.html
@@ -970,22 +970,22 @@
 
         // 通讯录数据 (修正学号问题)
         const contacts = [
-            { id: 1, name: "陈祖名", studentId: "1", phone: "x", email: "x" },
+            { id: 1, name: "陈祖名", studentId: "1", phone: "17317538671", email: "x" },
             { id: 2, name: "邓嘉麒", studentId: "2", phone: "x", email: "x" },
             { id: 3, name: "邓培城", studentId: "3", phone: "x", email: "x" },
             { id: 4, name: "邓为凌", studentId: "4", phone: "x", email: "x" },
-            { id: 5, name: "范俊皓", studentId: "5", phone: "x", email: "x" },
+            { id: 5, name: "范俊皓", studentId: "5", phone: "18042852842", email: "x" },
             { id: 6, name: "付子睿", studentId: "6", phone: "x", email: "x" },
             { id: 7, name: "何瑞开", studentId: "7", phone: "x", email: "x" },
             { id: 8, name: "洪子尧", studentId: "8", phone: "x", email: "x" },
-            { id: 9, name: "黄子健", studentId: "9", phone: "x", email: "x" },
-            { id: 10, name: "黄梓恒", studentId: "10", phone: "x", email: "x" },
-            { id: 11, name: "简裕桐", studentId: "11", phone: "x", email: "x" },
+            { id: 9, name: "黄子健", studentId: "9", phone: "18948138752", email: "x" },
+            { id: 10, name: "黄梓恒", studentId: "10", phone: "13690787319", email: "x" },
+            { id: 11, name: "简裕桐", studentId: "11", phone: "18125723927", email: "x" },
             { id: 12, name: "梁耿豪", studentId: "12", phone: "x", email: "x" },
             { id: 13, name: "梁昊贤", studentId: "13", phone: "x", email: "x" },
-            { id: 14, name: "梁建明", studentId: "14", phone: "x", email: "x" },
+            { id: 14, name: "梁建明", studentId: "14", phone: "18077902825", email: "x" },
             { id: 15, name: "梁建明", studentId: "15", phone: "x", email: "x" },
-            { id: 16, name: "梁轩豪", studentId: "16", phone: "x", email: "x" },
+            { id: 16, name: "梁轩豪", studentId: "16", phone: "13380222615", email: "x" },
             { id: 17, name: "林峰", studentId: "17", phone: "x", email: "x" },
             { id: 18, name: "罗万里", studentId: "18", phone: "x", email: "x" },
             { id: 19, name: "农友维", studentId: "19", phone: "x", email: "x" },
@@ -993,7 +993,7 @@
             { id: 21, name: "谭铭坚", studentId: "21", phone: "x", email: "x" },
             { id: 22, name: "涂宇毅", studentId: "22", phone: "x", email: "x" },
             { id: 23, name: "韦吉涛", studentId: "23", phone: "x", email: "x" },
-            { id: 24, name: "文荣朗", studentId: "24", phone: "x", email: "x" },
+            { id: 24, name: "文荣朗", studentId: "24", phone: "18138477231", email: "x" },
             { id: 25, name: "伍希彦", studentId: "25", phone: "x", email: "x" },
             { id: 26, name: "萧子轩", studentId: "26", phone: "x", email: "x" },
             { id: 27, name: "许梓栎", studentId: "27", phone: "x", email: "x" },
