--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
         const contacts = [
             { id: 1, name: "陈祖名", studentId: "1", phone: "17317538671", email: "x" },
             { id: 2, name: "邓嘉麒", studentId: "2", phone: "x", email: "x" },
-            { id: 3, name: "邓培城", studentId: "3", phone: "x", email: "x" },
+            { id: 3, name: "邓培城", studentId: "3", phone: "18038623356", email: "x" },
             { id: 4, name: "邓为凌", studentId: "4", phone: "x", email: "x" },
             { id: 5, name: "范俊皓", studentId: "5", phone: "18042852842", email: "x" },
             { id: 6, name: "付子睿", studentId: "6", phone: "x", email: "x" },
@@ -1030,10 +1030,10 @@
             { id: 9, name: "黄子健", studentId: "9", phone: "18948138752", email: "x" },
             { id: 10, name: "黄梓恒", studentId: "10", phone: "13690787319", email: "x" },
             { id: 11, name: "简裕桐", studentId: "11", phone: "18125723927", email: "x" },
-            { id: 12, name: "梁耿豪", studentId: "12", phone: "x", email: "x" },
+            { id: 12, name: "梁耿豪", studentId: "12", phone: "15220977628", email: "x" },
             { id: 13, name: "梁昊贤", studentId: "13", phone: "x", email: "x" },
-            { id: 14, name: "梁建明", studentId: "14", phone: "18077902825", email: "x" },
-            { id: 15, name: "梁建明", studentId: "15", phone: "x", email: "x" },
+            { id: 14, name: "梁建明", studentId: "14", phone: "x", email: "x" },
+            { id: 15, name: "梁舒然", studentId: "15", phone: "x", email: "x" },
             { id: 16, name: "梁轩豪", studentId: "16", phone: "13380222615", email: "x" },
             { id: 17, name: "林峰", studentId: "17", phone: "x", email: "x" },
             { id: 18, name: "罗万里", studentId: "18", phone: "x", email: "x" },
