--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
                     <a href="https://pan.baidu.com/s/1lSs9qKgI_l_MBpHkUO5AKw?pwd=0809 " class="download-link">
                         <i class="fab fa-baidu"></i> 百度网盘
                     </a>
-                    <a href="班级照片.z01" class="download-link">
+                    <a href="Part_1" class="download-link">
                         <i class="fas fa-download"></i> 直接下载
                     </a>
                 </div>
