--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
                         <i class="fab fa-baidu"></i> 百度网盘
                     </a>
                     <a href="https://www.123865.com/s/VE0Kjv-WcKG3" class="download-link">
-                        <i class="fas fa-download"></i> 直接下载
+                        <i class="fas fa-download"></i> 123云盘
                     </a>
                 </div>
                 
