--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
             color: var(--dark);
             line-height: 1.6;
             min-height: 100vh;
-            padding-bottom: 60px;
         }
 
         header {
@@ -214,14 +213,14 @@
         h1 {
             font-family: 'Quicksand', sans-serif;
             font-weight: 700;
-            font-size: 2.8rem;
+            font-size: 2.2rem;
             margin-bottom: 0.5rem;
             letter-spacing: 1px;
             text-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
 
         .class-info {
-            font-size: 1.2rem;
+            font-size: 0.9rem;
             opacity: 0.9;
             margin-bottom: 1rem;
             background: rgba(255,255,255,0.15);
@@ -295,7 +294,7 @@
 
         .section-title {
             font-family: 'Quicksand', sans-serif;
-            font-size: 2.2rem;
+            font-size: 1.8rem;
             color: var(--secondary);
             margin-bottom: 1.5rem;
             text-align: center;
@@ -335,10 +334,10 @@
         }
 
         .welcome-message p {
-            font-size: 1.2rem;
-            margin: 1.2rem 0;
+            font-size: 1.0rem;
+            margin: 0.8rem 0;
             color: #444;
-            line-height: 1.8;
+            line-height: 1.6;
         }
 
         .highlight {
@@ -1079,8 +1078,8 @@
                     <a href="https://pan.baidu.com/s/1lSs9qKgI_l_MBpHkUO5AKw?pwd=0809 " class="download-link">
                         <i class="fab fa-baidu"></i> 百度网盘
                     </a>
-                    <a href="班级照片.z01" class="download-link">
-                        <i class="fas fa-download"></i> 直接下载
+                    <a href="#" class="download-link">
+                        <i class="fas fa-download"></i> 123云盘
                     </a>
                 </div>
                 
@@ -1638,3 +1637,8 @@
     </script>
 </body>
 </html>
+
+
+
+
+
