--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 
         .download-title {
             font-family: 'Quicksand', sans-serif;
-            font-size: 2rem;
+            font-size: 1.5rem;
             color: var(--cloud);
             margin-bottom: 1.2rem;
             position: relative;
@@ -699,7 +699,7 @@
             margin-right: auto;
             position: relative;
             z-index: 1;
-            font-size: 1.1rem;
+            font-size: 1.0rem;
             line-height: 1.7;
         }
 
@@ -1402,11 +1402,11 @@
                     <a href="https://drive.google.com/drive/folders/1wRuT35uq6QvbKud3uF-wuVIYJUGk9KUO?usp=sharing" class="download-link">
                         <i class="fab fa-google-drive"></i> Google 网盘
                     </a>
-                    <a href="https://pan.baidu.com/s/1lSs9qKgI_l_MBpHkUO5AKw?pwd=0809 " class="download-link">
+                    <a href="https://pan.baidu.com/s/1__EzD6QC8xgjoirPj6felw?pwd=7d28 " class="download-link">
                         <i class="fab fa-baidu"></i> 百度网盘
                     </a>
-                    <a href="#" class="download-link">
-                        <i class="fas fa-download"></i> 123云盘
+                    <a href="https://www.123865.com/s/VE0Kjv-FtKG3" class="download-link">
+                        <i class="fas fa-download"></i> 123云盘（推荐）
                     </a>
                 </div>
                 
