--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@
             { id: 22, name: "涂宇毅", studentId: "22", phone: "x"},
             { id: 23, name: "韦吉涛", studentId: "23", phone: "x"},
             { id: 24, name: "文荣朗", studentId: "24", phone: "18138477231"},
-            { id: 25, name: "伍希彦", studentId: "25", phone: "x"},
+            { id: 25, name: "伍希彦", studentId: "25", phone: "13670697249"},
             { id: 26, name: "萧子轩", studentId: "26", phone: "x"},
             { id: 27, name: "许梓栎", studentId: "27", phone: "18923128365（许梓栎妈妈的）"},
             { id: 28, name: "张梓锋", studentId: "28", phone: "x"},
@@ -1646,7 +1646,7 @@
             { id: 45, name: "谢安琪", studentId: "45", phone: "x"},
             { id: 46, name: "许熙桐", studentId: "46", phone: "13392264393"},
             { id: 47, name: "张诗华", studentId: "47", phone: "x"},
-            { id: 48, name: "张溢嘉", studentId: "48", phone: "x"},
+            { id: 48, name: "张溢嘉", studentId: "48", phone: "17507575152"},
             { id: 49, name: "张子欣", studentId: "49", phone: "x"},
             { id: 50, name: "钟慧樱", studentId: "50", phone: "x"},
             { id: 51, name: "曾嘉丽", studentId: "51", phone: "x"	}
