--- a/index.html
+++ b/index.html
@@ -1624,7 +1624,7 @@
             { id: 23, name: "韦吉涛", studentId: "23", phone: "x"},
             { id: 24, name: "文荣朗", studentId: "24", phone: "18138477231"},
             { id: 25, name: "伍希彦", studentId: "25", phone: "13670697249"},
-            { id: 26, name: "萧子轩", studentId: "26", phone: "x"},
+            { id: 26, name: "萧子轩", studentId: "26", phone: "18128733757"},
             { id: 27, name: "许梓栎", studentId: "27", phone: "18923128365（许梓栎妈妈的）"},
             { id: 28, name: "张梓锋", studentId: "28", phone: "x"},
             { id: 29, name: "蔡安棋", studentId: "29", phone: "13630171064"},
